[workspace]
members = [
    "jacs",
    "jacs-cli",
    "jacs-core",
    "jacs-wasm",
    "jacs-duckdb",
    "jacs-postgresql",
    "jacs-redb",
    "jacs-media",
    "binding-core",
    "jacsnpm",
    "jacspy",
    "jacs-mcp",
    "jacsgo/lib"
]
exclude = ["jacs-surrealdb"]
resolver = "3"

[workspace.package]
rust-version = "1.93"
readme = "README.md"
authors = ["HAI.AI <engineering@hai.io>"]
license = "Apache-2.0"
homepage = "https://humanassisted.github.io/JACS"
repository = "https://github.com/HumanAssisted/JACS"
keywords = ["cryptography", "json", "ai", "data", "ml-ops"]
categories = ["cryptography", "text-processing", "data-structures"]

[workspace.metadata.dev-requirements]
cargo-audit = "0.22.1"
