[package]
name = "jacs-binding-core"
version = "0.9.4"
edition = "2024"
rust-version = "1.93"
resolver = "3"
description = "Shared core logic for JACS language bindings (Python, Node.js, etc.)"
readme = "../README.md"
authors = ["JACS Contributors"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/HumanAssisted/JACS"
homepage = "https://humanassisted.github.io/JACS"

[features]
default = []
a2a = ["jacs/a2a"]
attestation = ["jacs/attestation"]

[dependencies]
jacs = { version = "0.9.4", path = "../jacs" }
serde_json = "1.0"
base64 = "0.22.1"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
base64 = "0.22.1"
serial_test = "3"
