[package]
name = "jacs-cli"
version = "0.9.1"
edition = "2024"
rust-version = "1.93"
description = "JACS CLI: command-line interface for JSON AI Communication Standard"
readme = "../README.md"
authors = ["HAI.AI <engineering@hai.io>"]
license-file = "../LICENSE"
homepage = "https://humanassisted.github.io/JACS"
repository = "https://github.com/HumanAssisted/JACS"
keywords = ["cryptography", "json", "ai", "data", "ml-ops"]
categories = ["cryptography", "text-processing", "data-structures"]

[[bin]]
name = "jacs"
path = "src/main.rs"

[features]
default = ["mcp", "attestation"]
mcp = ["dep:jacs-mcp"]
attestation = ["jacs/attestation"]

[dependencies]
jacs = { version = "0.9.1", path = "../jacs" }
jacs-mcp = { version = "0.9.1", path = "../jacs-mcp", features = ["mcp"], optional = true }
clap = { version = "4.5.4", features = ["derive", "cargo"] }
rpassword = "7.3.1"
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "json", "rustls"] }
tiny_http = "0.12"
dirs = "5.0"
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[package.metadata.cargo-install]
bin = ["jacs"]
