[package]
name = "jacs-mcp"
version = "0.7.1"
edition = "2024"
rust-version = "1.93"
description = "MCP server for JACS: data provenance and cryptographic signing of agent state, with optional HAI.ai integration"
readme = "README.md"
license-file = "../LICENSE"
homepage = "https://humanassisted.github.io/JACS"
repository = "https://github.com/HumanAssisted/JACS"
authors = ["HAI.AI <engineering@hai.io>"]
keywords = ["mcp", "jacs", "ai", "agents", "signing", "provenance"]
categories = ["cryptography", "development-tools"]

[features]
default = ["mcp"]
mcp = ["dep:rmcp", "dep:tokio", "jacs/mcp-server"]
http = []

[dependencies]
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
rmcp = { version = "0.12", features = ["server", "transport-io", "macros"], optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }
jacs = { path = "../jacs", default-features = true }
jacs-binding-core = { path = "../binding-core", features = ["hai"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.0"
uuid = { version = "1", features = ["v4"] }
url = "2"
sha2 = "0.10.8"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3.1"
tempfile = "3"
