[package]
name = "jacs-redb"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true
readme.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Redb (pure-Rust embedded KV) storage backend for JACS documents"

[dependencies]
jacs = { version = "0.9.6", path = "../jacs", default-features = false }
redb = "3.1"
chrono = "0.4.40"
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "time"] }
serial_test = "3.2.0"
tempfile = "3.19.1"
