[package]
name = "jacs-surrealdb"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true
description = "SurrealDB storage backend for JACS documents"
readme.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords = ["cryptography", "json", "surrealdb", "storage"]
categories = ["database", "data-structures"]

[dependencies]
jacs = { version = "0.9.5", path = "../jacs", default-features = false }
surrealdb = { version = "3.0.2", default-features = false, features = ["kv-mem"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.40"
tokio = { version = "1.0", features = ["rt-multi-thread"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "time"] }
serial_test = "3.2.0"

[features]
default = []
