[package]
name = "jacs-surrealdb"
version = "0.1.17"
edition = "2024"
rust-version = "1.93"
description = "SurrealDB storage backend for JACS documents"
readme = "../README.md"
authors = ["HAI.AI <engineering@hai.io>"]
license = "Apache-2.0"
homepage = "https://humanassisted.github.io/JACS"
repository = "https://github.com/HumanAssisted/JACS"
keywords = ["cryptography", "json", "surrealdb", "storage"]
categories = ["database", "data-structures"]

[dependencies]
jacs = { version = "0.11.3", path = "../jacs", default-features = false }
surrealdb = { version = "3.0.2", default-features = false, features = ["kv-mem"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.40"
tokio = { version = "1.0", features = ["rt-multi-thread"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "time"] }
serial_test = "3.2.0"

[features]
default = []
