[package]
name = "jacs"
version = "0.3.6"
edition = "2024"
rust-version = "1.85"
resolver = "3"

include = [
    "src/**/*",
    "schemas/agent/v1/agent.schema.json",
    "schemas/header/v1/header.schema.json",
    "schemas/components/files/v1/files.schema.json",
    "schemas/components/signature/v1/signature.schema.json",
    "schemas/components/agreement/v1/agreement.schema.json",
    "schemas/components/unit/v1/unit.schema.json",
    "schemas/components/action/v1/action.schema.json",
    "schemas/components/service/v1/service.schema.json",
    "schemas/components/tool/v1/tool.schema.json",
    "schemas/components/contact/v1/contact.schema.json",
    "schemas/components/component/v1/component.schema.json",
    "schemas/message/v1/message.schema.json",
    "schemas/node/v1/node.schema.json",
    "schemas/program/v1/program.schema.json",
    "schemas/eval/v1/eval.schema.json",
    "schemas/task/v1/task.schema.json",
    "jacs.config.schema.json",
    "examples/*.json",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "build.rs",
    "CHANGELOG.md",
    "basic-schemas.png",
    "benches/sign_and_check_sig.rs",
    "schemas/components/embedding/v1/embedding.schema.json",
]
description = "JACS JSON AI Communication Standard"
readme = "README.md"
authors = ["HAI.AI <engineering@hai.io>"]
license-file = "LICENSE"
homepage = "https://humanassisted.github.io/JACS"
repository = "https://github.com/HumanAssisted/JACS"
keywords = ["cryptography", "json", "ai", "data", "ml-ops"]
categories = ["cryptography", "text-processing", "data-structures" ]
build = "build.rs"


[dependencies]
base64 = "0.22.1"
chrono = "0.4.40"
jsonschema = { version = "0.29", features = ["resolve-http", "resolve-file"] }
log = "0.4.27"
pem = "3.0.5"
rand = "0.9.0"
rsa = { version= "0.9.8", features= ["sha2", "pem"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
signature = "2.2.0"
url = "2.5.4"
sha2 = "0.10.8"
phf = { version = "0.11.3", features = ["macros"] }
strum = "0.27.1"
strum_macros = "0.27.0"
secrecy = "0.10.3"
aes-gcm = "0.10.3"
regex = "1.11.1"
mime_guess = "2.0.5"
flate2 = "1.1.1"
encoding_rs = "0.8.35"
difference = "2.0.0"
rpassword = "7.3.1"
validator = "0.20.0"
uuid = { version = "1.16.0", features = ["v4", "v7", "js"] }
env_logger = "0.11.8"
futures-util = "0.3.31"
referencing = "0.30.0"
futures-executor = "0.3.31"
update = "0.0.0"
getset = "0.1.5"
clap = { version = "4.5.4", features = ["derive", "cargo"], optional = true }
ratatui = { version = "0.29.0", optional = true }


tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
tracing-opentelemetry = "0.31"
opentelemetry = "0.30.0"
opentelemetry-otlp = { version = "0.30.0", default-features = false, features = ["trace", "logs", "metrics", "http-proto", "reqwest-client"] }
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio"] }
metrics = "0.24.2"
metrics-exporter-prometheus = "0.17"
opentelemetry-semantic-conventions = "0.30.0"
tokio = { version = "1.0", features = ["rt-multi-thread"] }

opentelemetry-prometheus = "0.29.1"
opentelemetry-appender-tracing = "0.30.1"
 

# libp2p = "0.55.0"
# [target.'cfg(target_os = "macos")'.dependencies]
# pqcrypto-mldsa = { version = "0.1", default-features = false, features = ["serialization"] }

# [target.'cfg(not(target_os = "macos"))'.dependencies]
# pqcrypto-mldsa = { version = "0.1", features = ["serialization"] }


[dev-dependencies]
color-eyre = "0.6"
criterion = "0.6.0"
mdbook = "0.4.48"
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.19.1"
serial_test = "3.2.0"
futures = "0.3"

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pqcrypto = "0.17.0"
pqcrypto-dilithium = {version = "0.5.0", features=["serialization"] }
pqcrypto-traits = "0.3.5"
ring = "0.17.9"
reqwest = {  version ="0.12.12", features = ["blocking", "json"] }
walkdir = "2.5.0"
object_store = { version ="0.12.0", features = ["serde","serde_json", "aws", "http"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3", features = ["Storage", "Window"] }

[[bin]]
name = "jacs"
path = "src/bin/cli.rs"
required-features = ["cli"]

[features]
cli = ["dep:clap", "dep:ratatui"]

[[bench]]
name = "sign_and_check_sig"
harness = false

[package.metadata.cargo-install]
bin = ["jacs"]

