[package]
name = "jacsnpm"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
resolver = "3"

[lib]
name = "jacsnpm"
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.5.0"
jacs = { path = "../jacs" }
serde_json = "1.0.140"
log = "0.4.27"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.22.1"
napi = "2.16.17"
napi-derive = "2.16.13"
