[package]
name = "jacsnpm"
version = "0.7.0"
edition = "2024"
rust-version = "1.93"
resolver = "3"

[lib]
name = "jacsnpm"
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.5.0"
jacs = { path = "../jacs" }
jacs-binding-core = { path = "../binding-core", features = ["hai"] }
tokio = { version = "1.0", features = ["rt-multi-thread"] }
serde_json = "1.0.140"
log = "0.4.27"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.22.1"
napi = { version = "2.16.17", features = ["async"] }
napi-derive = "2.16.13"

[build-dependencies]
napi-build = "2.1.6"
