[package]
name = "jacsnpm"
version = "0.10.1"
edition = "2024"
rust-version = "1.93"
resolver = "3"
license = "Apache-2.0"

[lib]
name = "jacsnpm"
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.5.0"
jacs = { path = "../jacs" }
jacs-binding-core = { path = "../binding-core" }
# Pulled in for `path_policy::resolve` only — PRD §4.2.6 single-source-of-truth
# delegate (Issue 022). default-features = false skips rmcp / tokio / contract.
jacs-mcp = { path = "../jacs-mcp", default-features = false }
tokio = { version = "1.0", features = ["rt-multi-thread"] }
serde_json = "1.0.140"
log = "0.4.27"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.22.1"
napi = { version = "2.16.17", features = ["async"] }
napi-derive = "2.16.13"

[features]
default = ["attestation"]
a2a = ["jacs-binding-core/a2a"]
attestation = ["jacs-binding-core/attestation"]

[build-dependencies]
napi-build = "2.1.6"
