[package]
name = "jacspy"
version = "0.5.0"
edition = "2024"
rust-version = "1.85"
resolver = "3"

[lib]
name = "jacs"
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.5.0"
pyo3 = { version = "0.24.2", features = ["extension-module", "abi3-py310"] }
jacs = { path = "../jacs" }
jacs-binding-core = { path = "../binding-core", features = ["hai"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
serde_json = "1.0.140"
log = "0.4.27"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.22.1"

[build-dependencies]
pyo3-build-config = "0.24.2"
