[package]
name = "jacspy"
version = "0.9.4"
edition = "2024"
rust-version = "1.93"
resolver = "3"
license = "Apache-2.0 OR MIT"
exclude = ["examples/**"]

[lib]
name = "jacspy"
crate-type = ["cdylib", "rlib"]

[features]
default = []
extension-module = ["pyo3/extension-module"]
auto-initialize = ["pyo3/auto-initialize"]
a2a = ["jacs-binding-core/a2a"]
attestation = ["jacs-binding-core/attestation"]

[dependencies]
lazy_static = "1.5.0"
pyo3 = { version = "0.24.2", features = ["abi3-py310"] }
jacs = { path = "../jacs" }
jacs-binding-core = { path = "../binding-core" }
tokio = { version = "1", features = ["rt-multi-thread"] }
serde_json = "1.0.140"
log = "0.4.27"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.22.1"

[build-dependencies]
pyo3-build-config = "0.24.2"
