[package]
name = "jacspy"
version = "0.11.2"
edition = "2024"
rust-version = "1.93"
resolver = "3"
license = "Apache-2.0"
exclude = ["examples/**"]

[lib]
name = "jacspy"
crate-type = ["cdylib", "rlib"]

[features]
default = []
extension-module = ["pyo3/extension-module"]
auto-initialize = ["pyo3/auto-initialize"]
a2a = ["jacs-binding-core/a2a"]
attestation = ["jacs-binding-core/attestation"]
agreements = ["jacs-binding-core/agreements"]

[dependencies]
lazy_static = "1.5.0"
# 0.29 floor: 0.24 had RUSTSEC-2026-0176 (PyList/PyTuple iterator OOB read)
# and RUSTSEC-2026-0177 (missing Sync bound on PyCFunction::new_closure)
pyo3 = { version = "0.29", features = ["abi3-py310"] }
jacs = { path = "../jacs" }
jacs-binding-core = { path = "../binding-core" }
# Pulled in for `path_policy::resolve` only — PRD §4.2.6 single-source-of-truth
# delegate (Issue 022). default-features = false skips rmcp / tokio / contract.
jacs-mcp = { path = "../jacs-mcp", default-features = false }
tokio = { version = "1", features = ["rt-multi-thread"] }
serde_json = "1.0.140"
log = "0.4.27"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.22.1"

[build-dependencies]
pyo3-build-config = "0.29"
