[build-system]
requires = ["maturin>=1.0,<2.0"] 
build-backend = "maturin"       
[project]
name = "jacs"
version = "0.5.0"
description = "JACS - JSON AI Communication Standard: Cryptographic signing and verification for AI agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0 with Common Clause" }
authors = [
    { name = "HAI.AI", email = "engineering@hai.io" },
]
keywords = ["cryptography", "signing", "verification", "ai", "agents", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = []

[project.optional-dependencies]
mcp = ["fastmcp>=0.1.0"]

[project.urls] 
Homepage = "https://github.com/HumanAssisted/JACS" 
Issues = "https://github.com/HumanAssisted/JACS/issues"  

# scripts.jacs = "jacs.cli_runner:main"

[tool.maturin]
features = ["pyo3/extension-module"] 
module-name = "jacs"  
python-source = "python" 
binding = "pyo3"  
# binaries = ["jacs"]

 